--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quantitative Quiz</title>
+    <title>Quiz Application</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
         <!-- Quiz Section (Hidden Initially) -->
         <div id="quiz-section" class="hidden">
             <header>
-                <h1>Quantitative Quiz</h1>
+                <h1 id="quiz-title">Quiz</h1> <!-- Dynamic Quiz Title -->
                 <div id="timer">Time Left: 00:00</div>
             </header>
 
@@ -38,3 +38,4 @@
 
 </body>
 </html>
+
